--- a/_sass/_font.scss
+++ b/_sass/_font.scss
@@ -1,11 +1,18 @@
 /* eb-garamond-regular - latin */
 @font-face {
+  font-family: 'CastoroTitling-Regular';
+  src: url('/assets/fonts/CastoroTitling-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/*@font-face {
   font-family: 'EB Garamond';
   font-style: normal;
   font-weight: 100;
   font-display: auto;
   src: url('#{$asset_url}/fonts/eb-garamond-v9-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('EB Garamond Regular'), local('EBGaramond-Regular'),
+  /*src: local('EB Garamond Regular'), local('EBGaramond-Regular'),
        url('#{$asset_url}/fonts/eb-garamond-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('#{$asset_url}/fonts/eb-garamond-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
        url('#{$asset_url}/fonts/eb-garamond-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
