--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,7 +1,7 @@
 body {
   background: $brand-color;
   color: $text-color;
-  font-family: $font-family;
+  font-family: 'CastoroTitling-Regular' !important;
   font-size: 1.3125em;
   line-height: 1.5;
 }
