--- a/_sass/_font.scss
+++ b/_sass/_font.scss
@@ -1,7 +1,7 @@
 /* eb-garamond-regular - latin */
 @font-face {
   font-family: 'CastoroTitling-Regular';
-  src: url('/assets/fonts/CastoroTitling-Regular.ttf') format('truetype');
+  src: url('/assets/fonts/CastoroTitling-Regular.ttf') format('truetype') !important;
   font-weight: normal;
   font-style: normal;
 }
