--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,7 +3,7 @@
 
 @font-face {
   font-family: 'CastoroTitling-Regular';
-  src: url('/assets/fonts/CastoroTitling-Regular.ttf') format('truetype');
+  src: url('/assets/fonts/CastoroTitling-Regular.ttf') format('truetype') !important;
   font-weight: normal;
   font-style: normal;
 }
