--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,10 @@
 ---
 ---
 
+body {
+  font-family: 'CastoroTitling-Regular', sans-serif !important;
+}
+
 @font-face {
   font-family: 'CastoroTitling-Regular';
   src: url('/assets/fonts/CastoroTitling-Regular.ttf') format('truetype') !important;
