--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,7 +2,7 @@
 ---
 
 body {
-  font-family: 'CastoroTitling-Regular', sans-serif !important;
+  font-family: 'CastoroTitling-Regular', !important;
 }
 
 @font-face {
