--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
+  
+  <style>
+  body {
+  font-family: 'CastoroTitling-Regular', !important;
+}
+</style>
+  
   <head>
     
     <meta charset="utf-8">
